[gd_scene load_steps=4 format=3 uid="uid://c600nu8dh6gi0"]

[ext_resource type="Script" uid="uid://cwuc3r7ndydvj" path="res://scripts/ui/main_menu.gd" id="1_gqnrb"]
[ext_resource type="AudioStream" uid="uid://xil6jhu0x5g8" path="res://assests/audio/La Loup - Journalist Room 1.wav" id="2_gkwmd"]
[ext_resource type="Texture2D" uid="uid://cthsac62c0b26" path="res://assests/objects/titlescreen.png" id="3_2i3o1"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_right = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gqnrb")

[node name="MainButtons" type="Control" parent="."]
z_index = 2
layout_mode = 1
anchor_left = -2.7740002
anchor_right = -2.7740002
offset_left = 47.158005
offset_right = 87.158005
offset_bottom = 40.0

[node name="Start" type="Button" parent="MainButtons"]
layout_mode = 1
anchors_preset = -1
anchor_left = 8.017
anchor_top = 0.312
anchor_right = 8.017
anchor_bottom = 0.312
offset_left = -200.68
offset_top = -16.48
offset_right = -9.679993
offset_bottom = 46.52
theme_override_font_sizes/font_size = 22
text = "Start Game"

[node name="Credits" type="Button" parent="MainButtons"]
layout_mode = 1
offset_left = 120.0
offset_top = 92.0
offset_right = 311.0
offset_bottom = 155.0
theme_override_font_sizes/font_size = 22
text = "Credits"

[node name="Quit" type="Button" parent="MainButtons"]
layout_mode = 1
offset_left = 120.0
offset_top = 188.0
offset_right = 311.0
offset_bottom = 251.0
theme_override_font_sizes/font_size = 22
text = "Quit"

[node name="SoundButton" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SoundButton" type="CheckButton" parent="SoundButton"]
visible = false
layout_mode = 0
offset_left = 467.0
offset_top = 244.0
offset_right = 511.0
offset_bottom = 280.0
scale = Vector2(1.7, 1.7)
theme_override_font_sizes/font_size = 20
button_pressed = true
icon_alignment = 1

[node name="SoundLabel" type="Label" parent="SoundButton"]
visible = false
layout_mode = 0
offset_left = 471.0
offset_top = 210.0
offset_right = 538.0
offset_bottom = 241.0
theme_override_font_sizes/font_size = 22
text = "Sound"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
position = Vector2(236, -307)
stream = ExtResource("2_gkwmd")
autoplay = true

[node name="Titlescreen" type="Sprite2D" parent="."]
position = Vector2(-8.000061, 3.9999924)
scale = Vector2(0.62, 0.615)
texture = ExtResource("3_2i3o1")

[connection signal="pressed" from="MainButtons/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="MainButtons/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MainButtons/Quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="SoundButton/SoundButton" to="." method="_on_sound_button_toggled"]
